<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeaCulture</string>

    <string name="no_tearooms_around">Jste připojeni k internetu?</string>
    <string name="geolocation_disabled">Máte povolenou geolokaci?</string>
    <string name="tearoom_loading_problem">Nastal problém při načítání detailů čajovny.</string>
    <string name="pick_city">Vyberte město:</string>
    
    <string name="loading">Načítám, strpení prosím...</string>
    
    <string name="still_opened">Otevřeno ještě</string>
    <string name="opened">Otevřeno</string>
    <string name="still_closed">Zavřeno ještě</string>
    <string name="closed">Zavřeno</string>
    <string name="unknown">Otevírací doba neznámá</string>
    
    <string name="web">Web: </string>
    <string name="phone">Telefon: </string>
    <string name="email">Email: </string>
    <string name="address">Adresa: </string>
    <string name="we_have_wifi">Máme wifi</string>
    
    <string name="monday">Pondělí</string>
    <string name="tuesday">Úterý</string>
    <string name="wednesday">Středa</string>
    <string name="thursday">Čtvrtek</string>
    <string name="friday">Pátek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Neděle</string>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_info">Informace</string>
    <string name="menu_search">Vyhledat polohu</string>
    
    <string name="context_details">Detaily</string>
    <string name="context_navigate_to">Spustit navigaci</string>
    
    
    <string name="info">Hledejte nejbližší čajovny jediným kliknutím - jednoduše, rychle a přehledně!</string>
    <string name="author">Feedback k webu směrujte prosím na @michal_hantl, \nk aplikaci na @shMoula.</string>
    <string name="website">http://www.teaculture.cz</string>
    
    
    <string name="use_gps">Přesnější určení polohy (GPS)</string>
    <string name="settings">Nastavení</string>
    <string name="distance_filter">Zobrazovat čajovny v okruhu</string>
</resources>
