<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#ffffff">
	
	<LinearLayout style="@style/action_bar">
		<ImageView 
			style="@style/action_bar_action"
			android:onClick="goHome" />
		<View style="@style/action_bar_separator" />
		<TextView 
			style="@style/action_bar_title"
			android:text="@string/menu_info"  />
	</LinearLayout>
	
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dp"
			android:orientation="vertical" >
	<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="10dp"
				android:orientation="vertical" >
				
	<TextView
		style="@style/title"
		android:text="@string/app_name"
		android:layout_gravity="center"
		android:gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	
	<ImageView
		android:layout_width="93dp"
		android:layout_height="128dp"
		android:layout_margin="10dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:scaleType="fitXY"
		android:src="@drawable/tc_logo" />
						
	<TextView 
		style="@style/info_text"
		android:text="@string/info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	
	<TextView
		style="@style/info_text"
		android:text="@string/author"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:autoLink="all"
	/>
	
	<TextView
		style="@style/info_text"
		android:text="@string/website"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:autoLink="web"
	/>
	
	</LinearLayout>
	</ScrollView>
</LinearLayout>