<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">
     
    <LinearLayout style="@style/action_bar">
		<ImageView 
			style="@style/action_bar_icon_teaculture"
			android:contentDescription="@string/menu_info"
			android:onClick="showInfo" />
		<TextView style="@style/action_bar_title" />
		<View style="@style/action_bar_separator" />
		<ImageView 
			style="@style/action_bar_action"
			android:src="@drawable/ic_search_category_default"
			android:contentDescription="@string/menu_search"
			android:onClick="doSearch" />
	 	<View style="@style/action_bar_separator" />
		<ImageView 
			style="@style/action_bar_action"
			android:src="@drawable/ic_menu_refresh"
			android:contentDescription="@string/menu_refresh"
			android:onClick="doRefresh" />
	</LinearLayout>

	
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">

  		<ListView android:id="@android:id/list"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="#ffffff"
        />
        <TextView android:id="@android:id/empty"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/no_tearooms_around"
        	style="@style/troomlist_item"
        />
	</LinearLayout>
</LinearLayout>

